Fix centre alignment

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
 html, body, canvas {margin: 0; border: 0; padding: 0; }
-body {line-height: 0; background: #7f7f7f; }
-canvas {display: block; position: absolute; left: 50%; top: 50%; background: #fff; transform: translateX(-50%) translateY(-50%); }
+html, body, .conway {height: 100%; }
+body {font-size: 0; line-height: 0; background: #7f7f7f; -o-user-select:none; -ms-user-select: none; -moz-user-select: none; -webkit-user-select: none; user-select: none; }
+.conway {text-align: center; }
+.conway:before {content: ''; display: inline-block; height: 100%; vertical-align: middle; }
+.conway canvas {display: inline-block; vertical-align: middle; background: #fff; }
